docs(java): document FFM-based native-library loading in README
The Java section still described the pre-migration JNA implementation:
wrong loading mechanism, wrong override property/semantics, a
non-existent package in the quick-start snippet, and no mention of the
classifier-jar mechanism or the --enable-native-access flag consumers
need.